--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="<%= context.config.publicPath %>favicon.png" />
   <link rel="stylesheet" href="<%= context.config.publicPath %>assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="<%= context.config.publicPath %>assets/css/bootstrap-icons.css" />
-  <link rel="stylesheet" href="<%= context.config.publicPath %>assets/css/iconfont.css" />
   <link rel="stylesheet" href="<%= context.config.publicPath %>assets/css/aos.css" />
   <link rel="stylesheet" href="<%= context.config.publicPath %>assets/css/style.css" />
-  <script src="<%= context.config.publicPath %>assets/script/bootstrap.min.js"></script>
 </head>
 
 <body>
