--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url("./poppins.css");
+@import url('./poppins.css');
 
 html {
   font-size: 100%;
@@ -14,10 +14,15 @@ body {
   overflow-x: hidden;
 }
 
-body h1,body h2,body h3,body h4,body h5,body h6 {
-  color: #0A1426;
+body h1,
+body h2,
+body h3,
+body h4,
+body h5,
+body h6 {
+  color: #0a1426;
   margin: 0px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 700;
 }
 
@@ -32,6 +37,26 @@ ol {
   .container {
     max-width: 1200px;
   }
+}
+
+.container {
+  position: relative;
+}
+
+.settings-icon {
+  position: relative;
+}
+
+.settings-wrap {
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  position: absolute;
+  z-index: 19;
+  top: 0;
+  right: -40px;
 }
 
 .header {
@@ -54,7 +79,7 @@ ol {
   font-weight: bold;
 }
 
-.header > .container > .primary-menu .site-branding a{
+.header > .container > .primary-menu .site-branding a {
   color: #333;
 }
 
@@ -78,6 +103,10 @@ ol {
   padding: 20px 0;
   line-height: 1;
   letter-spacing: 0.5em;
+}
+
+.header > .container > .primary-menu > .nav-menu > .main-menu ul > li > a:hover {
+  color: #5956E9;
 }
 
 .header
@@ -110,6 +139,8 @@ ol {
   ul
   > li
   .sub-menu {
+  display: none;
+  box-sizing: border-box;
   position: absolute;
   left: 0;
   top: 120%;
@@ -132,6 +163,8 @@ ol {
   ul
   > li:hover
   > .sub-menu {
+  display: block;
+  /* padding-bottom: 1px; */
   opacity: 1;
   visibility: visible;
   top: 100%;
@@ -163,13 +196,14 @@ ol {
   display: block;
   padding: 7px 15px;
   position: relative;
-  -webkit-transition: all 0.3s ease-out 0s;
-  transition: all 0.3s ease-out 0s;
+  -webkit-transition: all 0.2s ease-out 0s;
+  transition: all 0.2s ease-out 0s;
   border-radius: 0;
   line-height: 2;
   margin: 0;
   border-bottom: 1px solid #ececec;
   color: #1b3255;
+  overflow: hidden;
 }
 
 .header
@@ -195,7 +229,12 @@ ol {
   ul
   > li
   .sub-menu
-  li .sub-menu {
-    left: 100%;
-    top: 0%;
-  }
+  li
+  .sub-menu {
+  left: 100%;
+  top: 0%;
+}
+
+.header-top {
+  padding-top: 35px;
+}
