--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -212,9 +212,9 @@
 
     .icon {
       margin-bottom: 15px;
-      i {
-        font-size: 60px;
-        color: #5956e9;
+      img {
+        width: 60px;
+
       }
     }
 
@@ -258,39 +258,48 @@
     }
   }
 
-  .gridItem {
+  .gridItemWrap {
+    box-sizing: border-box;
+
     &:hover {
+      padding-bottom: 1px;
+    }
+
+    &:hover .gridItem {
       margin-top: -10px;
       box-shadow: 0px 0px 70px rgb(0 0 0 / 10%);
     }
-    background-color: #fff;
-    padding: 50px 35px;
-    border-radius: 5px;
-    -webkit-transition: all 0.3s ease-out 0s;
-    transition: all 0.3s ease-out 0s;
-    margin-bottom: 40px;
 
-    .title {
-      font-size: 20px;
-      margin-bottom: 17px;
-      line-height: 32px;
-      font-weight: 600;
-      color: #0a1426;
-      font-family: 'Poppins', sans-serif;
+    .gridItem {
+      background-color: #fff;
+      padding: 50px 35px;
+      border-radius: 5px;
+      -webkit-transition: all 0.3s ease-out 0s;
+      transition: all 0.3s ease-out 0s;
+      margin-bottom: 40px;
 
-      a {
-        display: inline-block;
-        color: inherit;
-        text-decoration: none;
-        transition: all 0.3s ease-out 0s;
-        background-color: transparent;
+      .title {
+        font-size: 20px;
+        margin-bottom: 17px;
+        line-height: 32px;
+        font-weight: 600;
+        color: #0a1426;
+        font-family: 'Poppins', sans-serif;
+
+        a {
+          display: inline-block;
+          color: inherit;
+          text-decoration: none;
+          transition: all 0.3s ease-out 0s;
+          background-color: transparent;
+        }
       }
-    }
 
-    .desc {
-      color: #6c727d;
-      margin: 0px;
-      line-height: 30px;
+      .desc {
+        color: #6c727d;
+        margin: 0px;
+        line-height: 30px;
+      }
     }
   }
 }
@@ -332,8 +341,8 @@
   .blogItem {
     margin-bottom: 40px;
 
-    .imgHolder {
-    }
+    // .imgHolder {
+    // }
 
     .entryContent {
       background-color: #fff;
